parser/src/snapshots/rapidus_parser__simple_expr_assign3.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()
---
Node {
    base: StatementList(
        [
            Node {
                base: AssignOp(
                    Node {
                        base: Identifier(
                            "v",
                        ),
                        loc: Loc(line:1,column:0,pos:0),
                    },
                    Node {
                        base: Number(
                            1.0,
                        ),
                        loc: Loc(line:1,column:5,pos:5),
                    },
                    Sub,
                ),
                loc: Loc(line:1,column:0,pos:0),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
