parser/src/snapshots/rapidus_parser__simple_expr_bitwise_and1.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: BinaryOp(
                    Node {
                        base: Number(
                            1.0,
                        ),
                        loc: Loc(line:1,column:0,pos:0),
                    },
                    Node {
                        base: Number(
                            3.0,
                        ),
                        loc: Loc(line:1,column:4,pos:4),
                    },
                    And,
                ),
                loc: Loc(line:1,column:4,pos:4),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
