parser/src/snapshots/rapidus_parser__simple_expr_cond.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: TernaryOp(
                    Node {
                        base: BinaryOp(
                            Node {
                                base: Identifier(
                                    "n",
                                ),
                                loc: Loc(line:1,column:0,pos:0),
                            },
                            Node {
                                base: Number(
                                    1.0,
                                ),
                                loc: Loc(line:1,column:5,pos:5),
                            },
                            Eq,
                        ),
                        loc: Loc(line:1,column:5,pos:5),
                    },
                    Node {
                        base: Number(
                            2.0,
                        ),
                        loc: Loc(line:1,column:9,pos:9),
                    },
                    Node {
                        base: Identifier(
                            "max",
                        ),
                        loc: Loc(line:1,column:13,pos:13),
                    },
                ),
                loc: Loc(line:1,column:0,pos:0),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
